kubernetes/db-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: db
  labels:
    app: db
    tier: database
spec:
  selector:
    matchLabels:
      app: db
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
        tier: database
    spec:
      containers:
        - image: panagiotishua/db
          name: db
          ports:
            - containerPort: 3306
              name: db
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
    tier: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:       # mysql Pod Should contain same labels
    app: db
    tier: database
