kubernetes/mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  selector:
    matchLabels:
      app: mailhog
  replicas: 1
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: panagiotishua/mailhog
          ports:
            - containerPort: 8025
            - containerPort: 1025
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  selector:
    app: mailhog
  ports:
    - protocol: "TCP"
      name: webui
      port: 8025
      targetPort: 8025
    - protocol: "TCP"
      name: mailhog
      port: 1025
      targetPort: 1025
  type: NodePort
