kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
spec:
  rules:
    - host: "app.alimisis.cloudns.ph"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 8080
    tls:
      - hosts:
        - app.alimisis.cloudns.ph
        secretName: tls-secret
