kubernetes/mailhog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
spec:
  rules:
    - host: "mailhog.alimisis.cloudns.ph"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
  tls:
    - hosts:
        - "mailhog.alimisis.cloudns.ph"
      secretName: tls-secret-mailhog
